--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- created with La Vouivre ©2006 Fabien Olivry - Snakes and Ladders script by Birgit Ferran // Pripravila Tina Arh // Tehnično uredil in popravil Leon Buhanec   -->
+﻿<!-- created with La Vouivre ©2006 Fabien Olivry - Snakes and Ladders script by Birgit Ferran // Pripravil Luka Končar // Tehnično uredil in popravil Leon Buhanec   -->
 <html>
 <head>
 <title>Kače in lestvice: Skladnja</title>
@@ -41,37 +41,7 @@ instructions +='<li>Če pristaneš na vrhu KAČE in odgovoriš nepravilno, se po
 instructions +='<li>Če pristaneš na eni od VROČIH TOČK (sonce ali kača) in odgovoriš pravilno, smeš ponovno metati kocko, če odgovoriš nepravilno, pa greš na ZAČETEK.</li>';
 instructions +='<li>Prvi igralec(ka), ki doseže 64. polje in pravilno odgovori na vprašanje, zmaga.</ul>';
 instructions +='<form>';
-instructions +='<p align="center">SREČNO!<br>VELIKO UŽITKOV OB IGRANJU!<br><br><font size="1">Tehnično uredil Leon Buhanec</font>';
-var instructions='<h3 align="center">NAVODILA</h3>';
-instructions +='<ul><li>Izberi število igralcev.</li>';
-instructions +='<li>Vsak naj meče kocko in odgovori na vprašanja.</li>';
-instructions +='<li>Če odgovoriš nepravilno, greš nazaj na prejšnje polje.</li>';
-instructions +='<li>Če pristaneš na spodnjem delu LESTVE in je tvoj odgovor pravilen, splezaš po njej.</li>';
-instructions +='<li>Če pristaneš na vrhu KAČE in odgovoriš nepravilno, se pomakneš dol po njej.</li>';
-instructions +='<li>Če pristaneš na eni od VROČIH TOČK (sonce ali kača) in odgovoriš pravilno, smeš ponovno metati kocko, če odgovoriš nepravilno, pa greš na ZAČETEK.</li>';
-instructions +='<li>Prvi igralec(ka), ki doseže 64. polje in pravilno odgovori na vprašanje, zmaga.</li></ul>';
-instructions +='<form>';
-instructions +='<p align="center">SREČNO!<br>VELIKO UŽITKOV OB IGRANJU!<br><br><font size="1">Tehnično uredil Leon Buhanec</font>';
-var instructions='<h3 align="center">NAVODILA</h3>';
-instructions +='<ul><li>Izberi število igralcev.</li>';
-instructions +='<li>Vsak naj meče kocko in odgovori na vprašanja.</li>';
-instructions +='<li>Če odgovoriš nepravilno, greš nazaj na prejšnje polje.</li>';
-instructions +='<li>Če pristaneš na spodnjem delu LESTVE in je tvoj odgovor pravilen, splezaš po njej.</li>';
-instructions +='<li>Če pristaneš na vrhu KAČE in odgovoriš nepravilno, se pomakneš dol po njej.</li>';
-instructions +='<li>Če pristaneš na eni od VROČIH TOČK (sonce ali kača) in odgovoriš pravilno, smeš ponovno metati kocko, če odgovoriš nepravilno, pa greš na ZAČETEK.</li>';
-instructions +='<li>Prvi igralec(ka), ki doseže 64. polje in pravilno odgovori na vprašanje, zmaga.</li></ul>';
-instructions +='<form>';
-instructions +='<p align="center">SREČNO!<br>VELIKO UŽITKOV OB IGRANJU!<br><br><font size="1">Tehnično uredil Leon Buhanec</font>';
-var instructions='<h3 align="center">NAVODILA</h3>';
-instructions +='<ul><li>Izberi število igralcev.</li>';
-instructions +='<li>Vsak naj meče kocko in odgovori na vprašanja.</li>';
-instructions +='<li>Če odgovoriš nepravilno, greš nazaj na prejšnje polje.</li>';
-instructions +='<li>Če pristaneš na spodnjem delu LESTVE in je tvoj odgovor pravilen, splezaš po njej.</li>';
-instructions +='<li>Če pristaneš na vrhu KAČE in odgovoriš nepravilno, se pomakneš dol po njej.</li>';
-instructions +='<li>Če pristaneš na eni od VROČIH TOČK (sonce ali kača) in odgovoriš pravilno, smeš ponovno metati kocko, če odgovoriš nepravilno, pa greš na ZAČETEK.</li>';
-instructions +='<li>Prvi igralec(ka), ki doseže 64. polje in pravilno odgovori na vprašanje, zmaga.</li></ul>';
-instructions +='<form>';
-instructions +='<p align="center">SREČNO!<br>VELIKO UŽITKOV OB IGRANJU!<br><br><font size="1">Tehnično uredil Leon Buhanec</font>';
+instructions +='<p align="center">SREČNO!<br>VELIKO UŽITKOV OB IGRANJU!';
 
 var player = 'Igralec(ka) ';
 var players = 'Igralca(i)';
