add old vs new haste chart

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <input type="file" id="statTrackerJson" name="statTrackerJson">
+        <select name="chartSelect" id="chartSelect">
+            <option value="stacksOverTime">Stacks over time</option>
+            <option value="oldVsNewHaste">Old vs new haste</option>
+        </select>
         <br />
         <canvas id="chart"></canvas>
 
