--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 
 <html>
     <head>
-        <title>Sona Stat Tracker</title>
+        <title>:tf:</title>
     </head>
-    <body>
-        <input type="file" id="statTrackerJson" name="statTrackerJson">
-        <select name="chartSelect" id="chartSelect">
-            <option value="stacksOverTime">Stacks over time</option>
-            <option value="oldVsNewHaste">Old vs new haste</option>
-        </select>
-        <br />
-        <canvas id="chart"></canvas>
-
-        <script src="bundle.js"></script>
+    <body style="position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+        <img src=https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png />
+        <a href="stacktracker.html">Actual link</a>
     </body>
 </html>
 
