add sz link to index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body style="position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
         <img src=https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png />
         <a href="stacktracker.html">Actual link</a>
+        <a href="sz.html">SŽ</a>
     </body>
 </html>
 
